Fixed back btn coloring on followersFollowing page while using dark mode.

--- a/client/src/pages/followersFollowing/followersFollowing.css
+++ b/client/src/pages/followersFollowing/followersFollowing.css
@@ -31,6 +31,7 @@
 }
 
 .back-btn {
+  color: var(--text-color-primary);
   cursor: pointer;
   border-radius: 50%;
   padding: 8px;
